// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders block button 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#486c86",
      "borderRadius": 10,
      "flexDirection": "row",
      "justifyContent": "center",
      "margin": 10,
      "opacity": 1,
      "padding": 10,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 3,
        "width": 3,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 3,
      "width": "100%",
    }
  }
>
  <Text
    style={
      Object {
        "color": "#FFF",
        "fontSize": 16,
        "fontWeight": "normal",
        "margin": 0,
        "textAlign": "left",
      }
    }
  >
    Click Me
  </Text>
</View>
`;

exports[`renders icon button 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#486c86",
      "borderRadius": 10,
      "flexDirection": "row",
      "justifyContent": "center",
      "margin": 10,
      "opacity": 1,
      "padding": 10,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 3,
        "width": 3,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 3,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "#FFF",
          "fontSize": 20,
        },
        Object {
          "paddingRight": 5,
        },
        Object {
          "fontFamily": "Ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
  <Text
    style={
      Object {
        "color": "#FFF",
        "fontSize": 16,
        "fontWeight": "normal",
        "margin": 0,
        "textAlign": "left",
      }
    }
  >
    Click Me
  </Text>
</View>
`;

exports[`renders large button 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#486c86",
      "borderRadius": 10,
      "flexDirection": "row",
      "justifyContent": "center",
      "margin": 10,
      "opacity": 1,
      "padding": 13,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 3,
        "width": 3,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 3,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#FFF",
        "fontSize": 20.8,
        "fontWeight": "normal",
        "margin": 0,
        "textAlign": "left",
      }
    }
  >
    Click Me
  </Text>
</View>
`;

exports[`renders outline button 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderColor": "#486c86",
      "borderRadius": 10,
      "borderWidth": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "margin": 10,
      "opacity": 1,
      "padding": 10,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 3,
        "width": 3,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 3,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#486c86",
        "fontSize": 16,
        "fontWeight": "normal",
        "margin": 0,
        "textAlign": "left",
      }
    }
  >
    Click Me
  </Text>
</View>
`;

exports[`renders regular button 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#486c86",
      "borderRadius": 10,
      "flexDirection": "row",
      "justifyContent": "center",
      "margin": 10,
      "opacity": 1,
      "padding": 10,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 3,
        "width": 3,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 3,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#FFF",
        "fontSize": 16,
        "fontWeight": "normal",
        "margin": 0,
        "textAlign": "left",
      }
    }
  >
    Click Me
  </Text>
</View>
`;

exports[`renders rounded button 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#486c86",
      "borderRadius": 20,
      "flexDirection": "row",
      "justifyContent": "center",
      "margin": 10,
      "opacity": 1,
      "padding": 10,
      "paddingHorizontal": 13.333333333333334,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 3,
        "width": 3,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 3,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#FFF",
        "fontSize": 16,
        "fontWeight": "normal",
        "margin": 0,
        "textAlign": "left",
      }
    }
  >
    Click Me
  </Text>
</View>
`;

exports[`renders small button 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#486c86",
      "borderRadius": 10,
      "flexDirection": "row",
      "justifyContent": "center",
      "margin": 10,
      "opacity": 1,
      "padding": 8,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 3,
        "width": 3,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 3,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#FFF",
        "fontSize": 12.8,
        "fontWeight": "normal",
        "margin": 0,
        "textAlign": "left",
      }
    }
  >
    Click Me
  </Text>
</View>
`;

exports[`renders transparent button 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "borderRadius": 0,
      "borderWidth": 0,
      "elevation": 0,
      "flexDirection": "row",
      "justifyContent": "center",
      "margin": 10,
      "opacity": 1,
      "padding": 10,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#FFF",
        "fontSize": 16,
        "fontWeight": "normal",
        "margin": 0,
        "textAlign": "left",
      }
    }
  >
    Click Me
  </Text>
</View>
`;
